<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/main_btn_menu"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_menu" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_tab_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red">

        </com.google.android.material.tabs.TabLayout>

        <ImageButton
            android:id="@+id/main_btn_search"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_menu_search" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_bottom_control_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/main_album_image"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/album_cover"
            android:padding="8dp"
            android:src="@drawable/default_cover" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <dev.xmuu.smp.component.MarqueeTextView
                android:id="@+id/main_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="1"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/main_song_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="歌曲名称" />

            <dev.xmuu.smp.component.MarqueeTextView
                android:id="@+id/main_song_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="1"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_song_title"
                tools:text="歌手 - 专辑名称" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/main_btn_control"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/play_or_pause"
            android:src="@drawable/ic_play_bar_btn_play" />

        <ImageButton
            android:id="@+id/main_btn_next"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next_song"
            android:src="@drawable/ic_play_bar_btn_next" />

        <ImageButton
            android:id="@+id/main_btn_play_list"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/playlist"
            android:src="@drawable/ic_play_bar_btn_playlist" />

    </LinearLayout>

</LinearLayout>